Return decoded html.

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -19,5 +19,7 @@
     <div id="style">Style</div>
     <div id="attribute" style="background-image: url('./assets/person.png'); background-size: contain; background-repeat: no-repeat;">Attribute</div>
     <img height="32px" width="32px" src="./assets/person.png"/>Image
+    {{> partial}}
+    {{helper}}
 </body>
 </html>
